Fixed white lines that appear on Firefox in speakers grid.

--- a/app/sass/warsjawa.scss
+++ b/app/sass/warsjawa.scss
@@ -194,10 +194,12 @@ section#speakers {
     li {
       padding: 0 0 1px 0;
       position: relative;
+      background: $warsjawa-blue;
 
       span {
         position: absolute;
         bottom: 0;
+        left: 0;
         width: 100%;
         background: rgba($warsjawa-blue, 0.7);
         color: #ffffff;
